--- a/news-JS-main/src/.eslintrc.json
+++ b/news-JS-main/src/.eslintrc.json
@@ -1,10 +1,8 @@
 {
-    "plugins": ["prettier", "import", "@typescript-eslint"],
+    "plugins": ["prettier", "import"],
     "extends": [
         "plugin:prettier/recommended",
-        "prettier",
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": 2020,
@@ -18,7 +16,6 @@
     "rules": {
         "no-debugger": "off",
         "no-console": 0,
-        "class-methods-use-this": "off",
-        "@typescript-eslint/no-explicit-any": "on"
+        "class-methods-use-this": "off"
     }
 }
